--- a/app/views/factory/making_orders/show.html.erb
+++ b/app/views/factory/making_orders/show.html.erb
@@ -6,29 +6,34 @@
 <% end %>
 
 <div class="row">
-  <div class="span2">
-    <p>
+  <div class="span3">
+    <p class="amount">
       <label class="label"><%= MakingOrder.human_attribute_name :formula %></label>
       <%= link_to @making_order.making_order_formula.formula_name, factory_formula_path(@making_order.making_order_formula) %>
     </p>
 
-    <p>
+    <p class="amount">
+      <label class="label"><%= MakingOrder.human_attribute_name :mixer_capacity %></label>
+      <%= number_with_precision @making_order.mixer_capacity %>kg
+    </p>
+    
+    <p class="amount">
       <label class="label"><%= MakingOrder.human_attribute_name :total_weight %></label>
-      <%= number_with_precision @making_order.total_weight %>
+      <%= number_with_precision @making_order.total_weight %>kg
     </p>
 
-    <p>
+    <p class="amount">
       <label class="label"><%= MakingOrder.human_attribute_name :weight_per_round %></label>
-      <%= number_with_precision @making_order.weight_per_round %>
+      <%= number_with_precision @making_order.weight_per_round %>kg
     </p>
 
-    <p>
+    <p class="amount">
       <label class="label"><%= MakingOrder.human_attribute_name :rounds_count %></label>
       <%= @making_order.rounds_count %>
     </p>
   </div>
 
-  <div class="span8">
+  <div class="span7">
     <p>
       <label class="label"><%= MakingOrder.human_attribute_name :comments %></label>
       <%= @making_order.comments %>
