--- a/app/views/factory/making_orders/_form.html.erb
+++ b/app/views/factory/making_orders/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div class="row">
     <div class="span5">
-      <%= f.input :mixer_capacity, :input_html => { :class => 'span1' } %>
+      <%= f.input :mixer_capacity, :as => :string, :input_html => { :class => 'span1' } %>
       <table id="formula_items_list" class="table">
         <thead>
           <tr>
