--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -11,14 +11,15 @@
       .amount {
         text-align: right;
       }
-      .comments pre {
-        border: 0;
-        font-weight: normal;
-        font-size: 80%;
-        min-height: 30px;
-      }
-      .comments pre.vertical {
-        min-height: 120px;
+      .comments {
+        pre {
+          border: 0;
+          font-weight: normal;
+          min-height: 60px;
+          &.vertical {
+            min-height: 120px;
+          }
+        }
       }
       span.highlight {
         font-size: 150%;
@@ -74,7 +75,7 @@
         vertical-align: top;
       }
       .note {
-        font-size: 10px;
+        font-size: 12px;
         font-style: italic;
       }
       .block {
