--- a/app/views/factory/making_orders/pdf/_pressing.pdf.erb
+++ b/app/views/factory/making_orders/pdf/_pressing.pdf.erb
@@ -50,7 +50,7 @@
                 <td><%= item.product_shape %></td>
                 <td><%= item.product_size %></td>
                 <td><%= item.product_pressure %></td>
-                <td><%= number_with_precision item.product_weight %></td>
+                <td class="amount"><%= number_with_precision item.product_weight %></td>
               </tr>
             <% end %>
           </tbody>
