Validacion del nombre unico del producto

--- a/app/views/factory/formulas/show.html.erb
+++ b/app/views/factory/formulas/show.html.erb
@@ -7,6 +7,9 @@
 
 <div class="row">
   <div class="span4">
+    <label class="label"><%= Formula.human_attribute_name :id %></label>
+    <p><%= @formula.id %></p>
+
     <label class="label"><%= Formula.human_attribute_name :name %></label>
     <p><%= @formula.name %></p>
 
