--- a/app/views/business/clients/_form.html.erb
+++ b/app/views/business/clients/_form.html.erb
@@ -1,12 +1,9 @@
-<%= simple_form_for [:business, @client] do |f| %>
-  <%= f.error_notification %>
-
-  <div class="inputs">
-    <%= f.input :full_name %>
-    <%= f.input :address %>
-  </div>
-
-  <div class="actions">
+<%= simple_form_for [:business, @client], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :full_name %>
+  <%= f.input :address %>
+  <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                business_clients_path, :class => 'btn' %>
   </div>
 <% end %>
