--- a/app/views/business/clients/index.html.erb
+++ b/app/views/business/clients/index.html.erb
@@ -1,25 +1,37 @@
-<h1>Clients</h1>
+<div class="page-header">
+  <h1><%=t '.title', :default => Client.model_name.human.pluralize %></h1>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th class="span1">ID</th>
-      <th>
-        <%= Client.human_attribute_name :full_name %>
-      </th>
-      <th>Created at</th>
-      <th></th>
+      <th><%= Client.human_attribute_name(:id) %></th>
+      <th><%= Client.human_attribute_name(:full_name) %></th>
+      <th><%= Client.human_attribute_name(:address) %></th>
+      <th><%= Client.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @clients.each do |client| -%>
+    <% @clients.each do |client| %>
       <tr>
-        <td><%= client.id %></td>
-        <td><%= link_to client.full_name, business_client_path(client) %></td>
+        <td><%= link_to client.id, business_client_path(client) %></td>
+        <td><%= client.full_name %></td>
+        <td><%= client.address %></td>
         <td><%=l client.created_at, :format => :short %></td>
         <td>
-          <%= link_to "Edit", edit_business_client_path(client) %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_business_client_path(client), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      business_client_path(client),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
-    <% end -%>
+    <% end %>
   </tbody>
 </table>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_business_client_path,
+            :class => 'btn btn-primary' %>
