--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -5,7 +5,7 @@
     body.printing {
       .separator {
         border: 2px dashed black;
-        margin:10px;
+        margin:0 10px 50px 10px;
         clear: both;
       }
       .amount {
