--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -16,6 +16,7 @@
           border: 0;
           font-weight: normal;
           min-height: 60px;
+          font-size: 125%;
           &.vertical {
             min-height: 120px;
           }
