--- a/app/views/business/clients/_form.html.erb
+++ b/app/views/business/clients/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [:business, @client], :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :full_name %>
+  <%= f.input :name %>
   <%= f.input :address %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
