--- a/app/views/business/clients/show.html.erb
+++ b/app/views/business/clients/show.html.erb
@@ -5,8 +5,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= Client.human_attribute_name(:id) %>:</strong></dt>
   <dd><%= @client.id %></dd>
-  <dt><strong><%= Client.human_attribute_name(:full_name) %>:</strong></dt>
-  <dd><%= @client.full_name %></dd>
+  <dt><strong><%= Client.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @client.name %></dd>
   <dt><strong><%= Client.human_attribute_name(:address) %>:</strong></dt>
   <dd><%= @client.address %></dd>
 </dl>
