--- a/app/views/layouts/business.html.erb
+++ b/app/views/layouts/business.html.erb
@@ -1,4 +1,5 @@
 <% content_for :sidebar do %>
   <li class="nav-header"><%= link_to Client.model_name.human(:count => 2), business_clients_path %></li>
+  <li class="nav-header"><%= link_to DeliveryNote.model_name.human(:count => 2), business_delivery_notes_path %></li>
 <% end %>
 <%= render :template => 'layouts/application' %>
