--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,8 +2,6 @@
 body { 
   padding-top: 60px;
 }
-@import "twitter/bootstrap/responsive";
-
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
@@ -33,13 +31,14 @@ body {
 
 @greenDarker: #0F6128;
 @greenDark: #0D784C;
-@linkColor: @greenDark;
-@navbarBackground: @greenDarker;
-@navbarBackgroundHighlight: @greenDark;
-@btnPrimaryBackground: #08c;
-@btnPrimaryBackgroundHighlight: #05c;
-@baseFontSize: 15px;
-@baseLineHeight: 20px;
-@navbarLinkColor: white;
-@navbarLinkColorHover: white;
-@navbarLinkColorActive: white;
+@gridColumnWidth: 68px;
+// @linkColor: @greenDark;
+// @navbarBackground: @greenDarker;
+// @navbarBackgroundHighlight: @greenDark;
+// @btnPrimaryBackground: #08c;
+// @btnPrimaryBackgroundHighlight: #05c;
+// @baseFontSize: 15px;
+// @baseLineHeight: 20px;
+// @navbarLinkColor: white;
+// @navbarLinkColorHover: white;
+// @navbarLinkColorActive: white;
