--- a/app/assets/stylesheets/making_orders.css.scss
+++ b/app/assets/stylesheets/making_orders.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the MakingOrders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.product-autocomplete {
+  input {
+    width: 400px;
+  }
+}
