--- a/app/views/factory/making_orders/index.html.erb
+++ b/app/views/factory/making_orders/index.html.erb
@@ -7,11 +7,12 @@
   <thead>
     <tr>
       <th class="span1"></th>
-      <th><%= MakingOrder.human_attribute_name :formula %></th>
-      <th><%= MakingOrder.human_attribute_name :total_weight %></th>
-      <th>Weight per round</th>
-      <th>Rounds count</th>
-      <th class="span5">Comments</th>
+      <th class="amount"><%= MakingOrder.human_attribute_name :formula %></th>
+      <th class="amount"><%= MakingOrder.human_attribute_name :products %></th>
+      <th class="amount"><%= MakingOrder.human_attribute_name :total_weight %></th>
+      <th class="amount"><%= MakingOrder.human_attribute_name :weight_per_round %></th>
+      <th class="amount"><%= MakingOrder.human_attribute_name :rounds_count %></th>
+      <th class="span3"><%= MakingOrder.human_attribute_name :comments %></th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,7 @@
     <tr>
       <td><%= link_to "##{making_order.id}", factory_making_order_path(making_order) %></td>
       <td class="amount"><%= making_order.formula_name %></td>
+      <td class="amount"><%= making_order.making_order_items.count %></td>
       <td class="amount"><%= number_with_precision making_order.total_weight %></td>
       <td class="amount"><%= number_with_precision making_order.weight_per_round %></td>
       <td class="amount"><%= making_order.rounds_count %></td>
