--- a/app/views/factory/products/new.html.erb
+++ b/app/views/factory/products/new.html.erb
@@ -3,4 +3,4 @@
   <li class="active"><a href="#"><%= t(:new, :scope => [:menu]) %></a></li>
 <% end %>
 
-<%= render 'form' %>
+<%= render :partial => 'form' %>
