--- a/app/views/business/clients/edit.html.erb
+++ b/app/views/business/clients/edit.html.erb
@@ -1,6 +1,8 @@
-<%- model_class = Client -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
-                                   :default => "Edit #{model_class.model_name.human}") %></h1>
-</div>
-<%= render :partial => 'form' %>
+<% content_for :secondary_navigation do %>
+  <li><%= link_to t(:index, :scope => [:menu]), business_clients_path %></li>
+  <li><%= link_to t(:new, :scope => [:menu]), new_business_client_path %></li>
+  <li><%= link_to t(:show, :scope => [:menu]), business_client_path(@client) %></li>
+  <li class="active"><a href="#"><%= t(:edit, :scope => [:menu]) %></a></li>
+<% end %>
+
+<%= render 'form' %>
