--- a/app/views/business/clients/index.html.erb
+++ b/app/views/business/clients/index.html.erb
@@ -1,6 +1,8 @@
-<div class="page-header">
-  <h1><%=t '.title', :default => Client.model_name.human.pluralize %></h1>
-</div>
+<% content_for :secondary_navigation do %>
+  <li class="active"><a href="#"><%= t :index, :scope => [:menu] %></a></li>
+  <li><%= link_to t(:new, :scope => [:menu]), new_business_client_path %></li>
+<% end %>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -8,30 +10,16 @@
       <th><%= Client.human_attribute_name(:name) %></th>
       <th><%= Client.human_attribute_name(:address) %></th>
       <th><%= Client.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @clients.each do |client| %>
       <tr>
         <td><%= link_to client.id, business_client_path(client) %></td>
-        <td><%= client.name %></td>
+        <td><%= link_to client.name, business_client_path(client) %></td>
         <td><%= client.address %></td>
         <td><%=l client.created_at, :format => :short %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-            edit_business_client_path(client), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-            business_client_path(client),
-            :method => :delete,
-            :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-            :class => 'btn btn-mini btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-  new_business_client_path,
-  :class => 'btn btn-primary' %>
