--- a/app/views/business/clients/show.html.erb
+++ b/app/views/business/clients/show.html.erb
@@ -1,24 +1,23 @@
-<div class="page-header">
-  <h1><%=t '.title', :default => Client.model_name.human %></h1>
-</div>
+<% content_for :secondary_navigation do %>
+  <li><%= link_to t(:index, :scope => [:menu]), business_clients_path %></li>
+  <li><%= link_to t(:new, :scope => [:menu]), new_business_client_path %></li>
+  <li class="active"><a href="#"><%= t(:show, :scope => [:menu]) %></a></li>
+  <li><%= link_to t(:edit, :scope => [:menu]), edit_business_client_path(@client) %></li>
+<% end %>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= Client.human_attribute_name(:id) %>:</strong></dt>
-  <dd><%= @client.id %></dd>
-  <dt><strong><%= Client.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @client.name %></dd>
-  <dt><strong><%= Client.human_attribute_name(:address) %>:</strong></dt>
-  <dd><%= @client.address %></dd>
-</dl>
-
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              business_clients_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_business_client_path(@client), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              business_client_path(@client),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
-</div>
+<table>
+  <tbody>
+    <tr>
+      <td class="span2"><b><%= Client.human_attribute_name(:id) %></b></td>
+      <td><%= @client.id %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:name) %></b></td>
+      <td><%= @client.name %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:address) %></b></td>
+      <td><%= @client.address %></td>
+    </tr>
+  </tbody>
+</table>
