--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -3,16 +3,22 @@
   <li><%= link_to t(:new, :scope => [:menu]), new_factory_formula_path %></li>
 <% end %>
 
+<%= form_for @search, :url => factory_formulas_path, :html => { :method => :get, :class => 'form-inline' } do |f| %>
+  <%= f.text_field :id_eq, :placeholder => 'ID' %>
+  <%= f.text_field :name_cont, :placeholder => 'Nombre' %>
+  <%= f.submit t(:search, :scope => [:actions]), :class => 'btn' %>
+<% end %>
+<hr>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th class="amount span1"></th>
-      <th><%= Formula.human_attribute_name :name %></th>
-      <th><%= Formula.human_attribute_name :abrasive %></th>
-      <th><%= Formula.human_attribute_name :grain %></th>
-      <th><%= Formula.human_attribute_name :hardness %></th>
-      <th><%= Formula.human_attribute_name :porosity %></th>
-      <th><%= Formula.human_attribute_name :alloy %></th>
+      <th class="amount span1"><%= sort_link(@search, :id, Formula.human_attribute_name(:id)) %></th>
+      <th><%= sort_link(@search, :name, Formula.human_attribute_name(:name)) %></th>
+      <th><%= sort_link(@search, :abrasive, Formula.human_attribute_name(:abrasive)) %></th>
+      <th><%= sort_link(@search, :grain, Formula.human_attribute_name(:grain)) %></th>
+      <th><%= sort_link(@search, :hardness, Formula.human_attribute_name(:hardness)) %></th>
+      <th><%= sort_link(@search, :porosity, Formula.human_attribute_name(:porosity)) %></th>
+      <th><%= sort_link(@search, :alloy, Formula.human_attribute_name(:alloy)) %></th>
     </tr>
   </thead>
   <tbody>
@@ -29,6 +35,7 @@
     <% end %>
   </tbody>
 </table>
+
 <div class="pull-right">
   <%= will_paginate @making_orders %>
 </div>
