--- a/app/views/factory/products/index.html.erb
+++ b/app/views/factory/products/index.html.erb
@@ -3,14 +3,20 @@
   <li><%= link_to t(:new, :scope => [:menu]), new_factory_product_path %></li>
 <% end %>
 
+<%= form_for @search, :url => factory_products_path, :html => { :method => :get, :class => 'form-inline' } do |f| %>
+  <%= f.text_field :id_eq, :placeholder => 'ID' %>
+  <%= f.text_field :name_cont, :placeholder => 'Nombre' %>
+  <%= f.submit t(:search, :scope => [:actions]), :class => 'btn' %>
+<% end %>
+<hr>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th class="amount span1"></th>
-      <th><%= Product.human_attribute_name :name %></th>
-      <th><%= Product.human_attribute_name :formula %></th>
-      <th class="amount"><%= Product.human_attribute_name :price %></th>
-      <th><%= Product.human_attribute_name :created_at %></th>
+      <th class="amount span1"><%= sort_link(@search, :id, Product.human_attribute_name(:id)) %></th>
+      <th><%= sort_link(@search, :name, Product.human_attribute_name(:name)) %></th>
+      <th><%= sort_link(@search, :formula_name, Product.human_attribute_name(:formula)) %></th>
+      <th class="amount"><%= sort_link(@search, :price, Product.human_attribute_name(:price)) %></th>
+      <th><%= sort_link(@search, :created_at, Product.human_attribute_name(:created_at)) %></th>
     </tr>
   </thead>
   <tbody>
