A ver si finalmente arreglamos el #22

--- a/app/views/factory/formulas/_form.html.erb
+++ b/app/views/factory/formulas/_form.html.erb
@@ -27,8 +27,10 @@
           </tr>
         </thead>
         <tbody>
+          <% i = 0 %>
           <% @formula.formula_items.each do |item| %>
-            <%= render :partial => 'formula_item', :locals => { :item => item } %>
+            <%= render :partial => 'formula_item', :locals => { :item => item, :i => i } %>
+            <% i = i+1 %>
           <% end %>
         </tbody>
       </table>
